// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SlideImage > styles > should render with custom aspect ratio 1`] = `
.circuit-0 {
  background: var(--cui-bg-subtle);
}

.circuit-1 img {
  object-fit: cover;
}

<div>
  <div
    class="_base_a282dc circuit-0"
    style="--aspect-ratio: 50%;"
  >
    <img
      alt="Aerial photo of turbulent blue ocean waves"
      class="_base_1174d4 _child_a282dc circuit-1"
      src="/images/illustration-waves.jpg"
    />
  </div>
</div>
`;

exports[`SlideImage > styles > should render with default styles 1`] = `
.circuit-0 {
  background: var(--cui-bg-subtle);
}

.circuit-1 img {
  object-fit: cover;
}

<div>
  <div
    class="_base_a282dc circuit-0"
    style="--aspect-ratio: 56%;"
  >
    <img
      alt="Aerial photo of turbulent blue ocean waves"
      class="_base_1174d4 _child_a282dc circuit-1"
      src="/images/illustration-waves.jpg"
    />
  </div>
</div>
`;
